style/base.css
html {
	background: #004a86;
	background: -webkit-radial-gradient(center center, circle cover, #0091d5 0%, #0091d5 15%, #004a86 100%);
	background: -moz-radial-gradient(center center, circle cover, #0091d5 0%, #0091d5 15%, #004a86 100%);
	background: -ms-radial-gradient(center center, circle cover, #0091d5 0%, #0091d5 15%, #004a86 100%);
	background: -o-radial-gradient(center center, circle cover, #0091d5 0%, #0091d5 15%, #004a86 100%);
	background: radial-gradient(center center, circle cover, #0091d5 0%, #0091d5 15%, #004a86 100%);
	height: 100%;
}

html, body {
	margin: 0;
	padding: 0;
}

body {
	height: 100%;
	min-height: 100%;
	margin: 0;
	padding: 0 30px;
	background: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAEAAAAA0CAYAAAA62j4JAAAAe0lEQVR42u3QMQ5AQABFQbWIaGiI6CjU7n+z9TdxCjvFO8CbrpSypTutaWqtCnClJ51pb60KsHzzc+pbqwKM6UhD6loLAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAPC/XvoS9OcMtc3PAAAAAElFTkSuQmCC');
}

/* Reset */
	ul, ol, li, form, dl, dt, dd {
		padding: 0;
		margin: 0;
		display: block;
	}
	ul, ol {
		list-style: none;
	}
	article, aside, details, figcaption, figure,
	footer, header, hgroup, menu, nav, section {
		display: block;
	}
/* Text/Fonts */
	select, input, textarea {
		color: #333;
	}
	body {
		font:13px/1.231 sans-serif;
		*font-size:small;
		color: #fff;
	}
	pre, code, kbd, samp { font-family: monospace, sans-serif; }
	/*
	sub, sup { font-size: 75%; line-height: 0; position: relative; }
	sup { top: -0.5em; }
	sub { bottom: -0.25em; }
	*/
	p {
		line-height: 1.4;
	}
/* Links */
	a img {
		border: 0;
	}
	
	a:link, a:visited {
		text-decoration: none;
		color: #ffb135;
		font-weight: bold;
	}
	
	a:hover, a:active {
		text-decoration: underline;
	}
/* Forms */
	/* Webkit browsers add a 2px margin outside the chrome of form elements */
	select, input, textarea, button { font:99% sans-serif; margin: 0; }
	
	input, select {
		vertical-align: middle;
		_vertical-align: text-bottom;
	}
	
	input[type="radio"] { vertical-align: text-bottom; }
	input[type="checkbox"] { vertical-align: bottom; *vertical-align: baseline; }
	
	textarea, input {
		font-family: arial, sans-serif;
		font-size: 1em;
	}
	
	button.custom {
		padding: 0;
		margin: 0;
		border: 0;
		background: none;
		cursor: pointer;
		overflow: visible;
		vertical-align: middle;
		font-size: 1em;
		width: auto;
	}
	button.custom::-moz-focus-inner { 
		border: 0;
		padding: 0;
	}
	legend { *margin-left: -7px; } 
	
	label, input[type="button"], input[type="submit"], input[type="image"], button { cursor: pointer; }

/*******************************************
 ********* Section specific styles *********
 *******************************************/

/* Main container */
	.container {		
		width: 100%;
		height: 100%;
		margin: 0 auto;
		position: relative;
		display: table;
		table-layout:fixed;
	}
	.container.intro {
		width: 835px;
	}
/* Header */
	.container > header {
		display: table-cell;
		vertical-align: middle;
		height: 79px;
	}
	.container.intro > header {
		height: 169px;
	}
	.container > header h1 {
		text-align: center;
		color: #fff;
		font: normal 5.3em/1 prowin, monospace;
		margin: 0;
		/* I don't really want a 1px blur, but it works around http://code.google.com/p/chromium/issues/detail?id=86702 */
		text-shadow: #004a86 0 6px 1px;
		-webkit-transform: scale(0.7);
		-moz-transform: scale(0.7);
		-ms-transform: scale(0.7);
		-o-transform: scale(0.7);
		transform: scale(0.7);
	}
	.container > header h1::before, .container > header h1::after {
		background: url('imgs/sprites1.png') no-repeat -10px -6px;
		width: 133px;
		height: 89px;
		display: inline-block;
		vertical-align: middle;
		content: '';
		margin: 0 30px 0 0;
	}
	.container > header h1::after {
		margin: 0 0 0 18px;
		-webkit-transform: scaleX(-1);
		-moz-transform: scaleX(-1);
		-ms-transform: scaleX(-1);
		-o-transform: scaleX(-1);
		transform: scaleX(-1);
	}
	.container.intro > header h1 {
		-webkit-transform: scale(1);
		-moz-transform: scale(1);
		-ms-transform: scale(1);
		-o-transform: scale(1);
		transform: scale(1);
	}
/* Canvas */
	.canvas-view {
		text-align: center;
		display: table-row;
	}
	.canvas-cell {
		display: table-cell;
		height: 100%;
	}
	.canvas-inner {
		overflow: auto;
		position: relative;
		background: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAQAQMAAAAlPW0iAAAABlBMVEX////MzMw46qqDAAAAEUlEQVQIHWP4z8CAFWEX/Q8Afr8P8WzDsvUAAAAASUVORK5CYII=');
		box-shadow: 0 4px 18px rgba(0,0,0,0.35);
		height: 100%;
		/*cursor: crosshair; meh, difficult to see */
	}
	.container.intro .canvas-cell {
		height: 170px;
		cursor: auto;
	}
	.container.intro .canvas-inner {
		overflow: hidden;
	}
	.sprite-canvas-container {
		position: absolute;
	}
	.container.intro .sprite-canvas-container {
		opacity: 0;
	}
	.sprite-canvas-container canvas {
		display: block;
	}
	.sprite-canvas-container .highlight {
		background: rgba(0, 90, 255, 0.25);
		position: absolute;
		top: 0;
		left: 0;
		width: 5px;
		height: 5px;
		pointer-events: none;
		border: 1px solid rgba(0, 114, 255, 0.5);
		-moz-box-sizing: border-box;
		box-sizing: border-box;
		display: none;
	}
	/* Upload button */
		.upload-input {
			position: absolute;
			top: -5000px;
			left: -5000px;
		}
		.select-btn {
			position: absolute;
			top: 54px;
			left: 50%;
			margin: 0 0 0 -121px;
			border-radius: 100px;
			color: #fff;
			font: normal 2.4em/1 prowin, monospace;
			padding: 13px 28px;
			box-shadow: inset 0 0 6px rgba(255, 108, 0, 1), 0 3px 6px rgba(0, 0, 0, 0.7);
			background: -webkit-linear-gradient(top, rgba(255,185,90,1) 0%, rgba(255,108,0,1) 50%, rgba(199,58,0,1) 100%);
			background:    -moz-linear-gradient(top, rgba(255,185,90,1) 0%, rgba(255,108,0,1) 50%, rgba(199,58,0,1) 100%);
			background:     -ms-linear-gradient(top, rgba(255,185,90,1) 0%, rgba(255,108,0,1) 50%, rgba(199,58,0,1) 100%);
			background:      -o-linear-gradient(top, rgba(255,185,90,1) 0%, rgba(255,108,0,1) 50%, rgba(199,58,0,1) 100%);
			background:         linear-gradient(top, rgba(255,185,90,1) 0%, rgba(255,108,0,1) 50%, rgba(199,58,0,1) 100%);
			cursor: pointer;
			text-shadow: rgba(0,0,0,0.5) 0 2px 0;
			display: none;
		}
		.container.intro .select-btn {
			display: block;
		}
	/* Drop indicator */
		.drop-indicator {
			position: absolute;
			top: 0;
			left: 0;
			right: 0;
			bottom: 0;
			background: rgba(37, 207, 28, 0.2);
			box-shadow: inset 0 0 18px #175a00;
			display: none;
			pointer-events: none;
		}
		.drag-over .drop-indicator {
			display: block;
			opacity: 1;
		}
/* Further detail */
	.further-detail {
		display: table-row;
		overflow: hidden;
		/*height: 100px;*/
	}
	.container.intro .further-detail {
		height: 100%;
	}
	/* Intro copy */
		.intro-copy {
			display: none;
		}
		.container.intro .intro-copy {
			display: table-row;
		}
		.intro-copy > section {
			display: table-cell;
			padding: 37px;
			width: 50%;
		}
		.intro-copy h1 {
			font: normal 3.1em/1 prowin, monospace;
			margin: 0;
			text-shadow: #004a86 0 4px;
		}
		.intro-copy p {
			font: normal 1.1em/1.5 sans-serif;
		}
	/* Code ouput */
		.css-output {
			display: block;
			white-space: pre;
			background: rgba(0, 0, 0, .23);
			margin: 0 0 10px;
			padding: 20px 30px;
			font: normal 1.2em/1 prowin, monospace;
			overflow: hidden;
		}
		.container.intro .css-output {
			height: 0;
			padding-top: 0;
			padding-bottom: 0;
		}
/* Toolbar */
	.toolbar-container {
		display: table-row;
		position: relative;
	}
	.toolbar {
		overflow: hidden;
		padding: 5px 6px 0;
		position: relative;
		z-index: 1;
		border-style: solid;
		border-width: 1px 0;
		border-color: #e2e2e2 #000 #888;
		color: #333;
		border-radius: 5px 5px 0 0;
		background-image: -webkit-linear-gradient(top, #d0d0d0, #a7a7a7);
		background-image:    -moz-linear-gradient(top, #d0d0d0, #a7a7a7);
		background-image:     -ms-linear-gradient(top, #d0d0d0, #a7a7a7);
		background-image:      -o-linear-gradient(top, #d0d0d0, #a7a7a7);
		background-image:         linear-gradient(top, #d0d0d0, #a7a7a7);
	}
	.container.intro .toolbar {
		height: 0;
		padding-top: 0;
		padding-bottom: 0;
		border-top-width: 0;
		border-bottom-width: 0;
	}
	.toolbar-container [role='button'] {
		float: left;
		margin: 0 5px 5px 0;
		border: 1px solid #888;
		border-radius: 4px;
		
		background: -webkit-linear-gradient(top, #fefefe, #b8b8b8);
		background:    -moz-linear-gradient(top, #fefefe, #b8b8b8);
		background:     -ms-linear-gradient(top, #fefefe, #b8b8b8);
		background:      -o-linear-gradient(top, #fefefe, #b8b8b8);
		background:         linear-gradient(top, #fefefe, #b8b8b8);
		cursor: pointer;
	}
	.toolbar-container [role='button'] div {
		padding: 4px 10px 4px 26px;
		background: url('imgs/sprites1.png') no-repeat;
	}
	.toolbar-container [role='button'].active {
		background: #707070;
		box-shadow: inset 0 3px 7px rgba(0,0,0,0.6);
		color: #fff;
	}
	.toolbar-container .feedback {
		float: left;
		padding: 5px;
		color: #555;
		opacity: 0;
	}
	.toolbar-container .select-sprite {
		border-width: 1px;
		border-radius: 4px 0 0 4px;
		margin-right: 0;
	}
	.toolbar .select-sprite div {
		background-position: -863px 3px;
	}
	.toolbar .pick-bg {
		border-radius: 0 4px 4px 0;
		margin-right: 5px;
		border-left-width: 0;
	}
	.toolbar .pick-bg div {
		background-position: -864px -79px;
	}
	.toolbar .open-img div {
		background-position: -864px -37px;
	}
	
/* Footer */
	footer.main {
		display: table-row;
		overflow: hidden;
		background: rgba(0, 0, 0, .23);
	}
	footer.main p {
		float: right;
		padding: 14px 30px 0;
		margin: 0;
	}
	footer.main .the-team-logo {
		background: url('imgs/sprites1.png') no-repeat -154px -8px;
		width: 88px;
		height: 22px;
		display: inline-block;
		text-indent: -5000px;
		vertical-align: middle;
		margin: 0 0 0 4px;
	}
	footer.main ul {
		float: left;
		padding: 16px 30px;
	}
	footer.main li {
		display: inline;
	}
	footer.main li a:link, footer.main li a:visited {
		font-weight: normal;
		color: #fff;
		float: left;
		padding: 0 10px 0 0;
		margin: 0 10px 0 0;
		border-right: 1px solid #fff;
	}
	footer.main li:last-child a:link, footer.main li:last-child a:visited {
		padding: 0;
		margin: 0;
		border: none;
	}

